exports[`test renders ./components/back-top/demo/basic.md correctly 1`] = `
<div>
  Scroll down to see the bottom-right
  <strong
    style="color:rgba(64, 64, 64, 0.6);">
     gray 
  </strong>
  button.
</div>
`;

exports[`test renders ./components/back-top/demo/custom.md correctly 1`] = `
<div>
  Scroll down to see the bottom-right
  <strong
    style="color:#57c5f7;">
     blue 
  </strong>
  button.
</div>
`;
